# Health-Risk-Predictor-from-Lifestyle-Medical-History

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  readme_health_risk_predictor_from_lifestyle_medical_history (1).md  requirements.txt
app/: app.py  app_main.py
docs/: Risk_Score_Explanation.docx  data_create.py  why add noise.docx  why.docx
notebooks/: EDA.ipynb  data_cleaning_0.ipynb  data_cleaning_1.ipynb  model_building.ipynb
